--- a/jsjs/index.css
+++ b/jsjs/index.css
@@ -4,27 +4,23 @@
 #main {
     background-color: white;
     width: 100%;
-    height: 80vh;
+    height: 89vh;
 }
-#search_box{
-    width: 1000px;
-    height: 300px;
-    background-color: white;
+.flex-nowrap{
+    padding-top: 100px;
+    max-width: 1000px;
     margin: 0 auto;
-    top: 100px;
-    position: relative;
-
 }
-#category{
-    top: 300px;
-    position: relative;
+.carousel-inner{
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 .form-control{
     font-size: 2rem;
 }
 
-/*이어붙이기*/
+/*이어붙이기(hj)*/
 .footer-category-group{
     display: flex;
     justify-content: space-around;
@@ -59,3 +55,4 @@
 .footer_category_group_g2 i:hover{
     color: cornflowerblue;
 }
+
