--- a/hyeonjeong/css/api_list.css
+++ b/hyeonjeong/css/api_list.css
@@ -1,29 +1,28 @@
 .container{
     margin-top: 3%;
 }
+.container .row{
+    margin-bottom: 5%;
+}
 .container > .row{
-    margin-bottom: 3%;
+    display: flex;
+    justify-content: center;
+}
+.big-tit{
+    padding: 0;
 }
 .api-search{
     display: flex;
+    padding: 0;
 }
-/* .api-search > input[type='search']{
-    width: 100%;
-} */
 .search-result{
     font-size: 20px;
+    padding: 0;
 }
 .search-result span{
     color: blue;
 }
-.wrap{
-    width: 100%;
-    overflow: hidden;
-    margin: 0 auto;
-}
 .condition{
-    width: 20%;
-    float: left;
     border:1px solid lightgray
 }
 .condition-tit{
@@ -40,12 +39,15 @@
     list-style: none;
     padding: 0;
 }
+
+/* API-list */
 .ul-wrapper{
-    padding-left: 0;
+    padding: 0;
 }
 .api-list{
     list-style: none;
     border: 1px solid lightgray;
+    padding:1.5%;
 }
  .api-title{
     font-weight: bold;
@@ -55,22 +57,22 @@
     font-size: 13px;
     margin-bottom: 1rem;
 }
+.info-item{
+    width: 12%;
+}
 .api-info-title{
-    float: left;
     font-size:13px;
     font-weight: bold;
     margin-right: 1%;
 }
+
 .api-data{
     font-size:13px;
     color: darkgray;
     margin-right: 7%;
     /*float: left;*/
 }
-.api-info button{
-    width: 9%;
-    height: 5rem;
-    float: left;
-    margin-left: 72rem;
-    margin-top: -6.5rem;
+.api-list button{
+    margin-left: 56%;
+    margin-top: -6.3%;
 }
