--- a/hyeonjeong/css/api_list.css
+++ b/hyeonjeong/css/api_list.css
@@ -16,8 +16,10 @@
     padding: 0;
 }
 .search-result{
-    font-size: 20px;
+    font-size: 1.55rem;
     padding: 0;
+    display: flex;
+    justify-content: center;
 }
 .search-result span{
     color: blue;
@@ -54,20 +56,20 @@
     margin-bottom: 1rem;
 }
 .api-content{
-    font-size: 13px;
+    font-size: 0.75rem;
     margin-bottom: 1rem;
 }
 .info-item{
     width: 12%;
 }
 .api-info-title{
-    font-size:13px;
+    font-size: 0.75rem;
     font-weight: bold;
     margin-right: 1%;
 }
 
 .api-data{
-    font-size:13px;
+    font-size:0.75rem;
     color: darkgray;
     margin-right: 7%;
     /*float: left;*/
