--- a/hyeonjeong/css/api_list.css
+++ b/hyeonjeong/css/api_list.css
@@ -1,6 +1,12 @@
 .container{
     margin-top: 3%;
 }
+a{
+    color: black;
+    text-decoration: none;
+}
+
+/* API-search(input_box) */
 .container .row{
     margin-bottom: 5%;
 }
@@ -11,10 +17,18 @@
 .big-tit{
     padding: 0;
 }
+.page-title{
+    margin-bottom: 5%;
+}
 .api-search{
     display: flex;
     padding: 0;
 }
+.api-search .form-control{
+    font-size: 1.3rem;
+}
+
+/* API-result(number) */
 .search-result{
     font-size: 1.55rem;
     padding: 0;
@@ -24,6 +38,8 @@
 .search-result span{
     color: blue;
 }
+
+/* API-search(condition) */
 .condition{
     border:1px solid lightgray
 }
@@ -42,7 +58,7 @@
     padding: 0;
 }
 
-/* API-list */
+/* API-result(list) */
 .ul-wrapper{
     padding: 0;
 }
@@ -67,14 +83,13 @@
     font-weight: bold;
     margin-right: 1%;
 }
-
 .api-data{
     font-size:0.75rem;
     color: darkgray;
     margin-right: 7%;
     /*float: left;*/
 }
-.api-list button{
+.api-list .downbutt{
     margin-left: 56%;
     margin-top: -6.3%;
 }
