--- a/hyeonjeong/css/api/detail.css
+++ b/hyeonjeong/css/api/detail.css
@@ -1,52 +1,54 @@
-.container{
+/* common */
+.container {
     margin-top: 3%;
-}
-a{
-    color: black;
-    text-decoration: none;
-}
-
-.col-10 .row > div{
-    padding: 0;
-}
-.col-10 .row{
-    margin-bottom: 5%;
 }
 
 /* API-detail-page-title */
 .big-tit,
-.sm-tit{
+.sm-tit {
     padding: 0;
 }
 
 /* API-result(list) */
-.ul-wrapper{
+.ul-wrapper {
     padding: 0;
 }
-.api-list{
+
+.api-list {
     list-style: none;
     border: 1px solid lightgray;
-    padding:1.5%;
+    padding: 1.5%;
 }
- .api-title{
+
+.api-title {
     font-weight: bold;
     margin-bottom: 1rem;
 }
-.api-content{
+
+.api-content {
     font-size: 0.75rem;
     margin-bottom: 1rem;
 }
-.info-item{
+
+.info-item {
     width: 12%;
 }
-.api-info-title{
+
+.api-info-title {
     font-size: 0.75rem;
     font-weight: bold;
     margin-right: 1%;
 }
-.api-data{
-    font-size:0.75rem;
+
+.api-data {
+    font-size: 0.75rem;
     color: darkgray;
     margin-right: 7%;
     /*float: left;*/
+}
+
+/* API-detail-API-backbutt */
+.backbutt{
+    color: white;
+    text-decoration: none;
 }
